--- a/table.html
+++ b/table.html
@@ -50,7 +50,7 @@
 	</table>
 	<script src="js/jquery-3.5.1.js">
 	</script>
-	<script src="js/myscript.js">
+	<script src="js/my_script.js">
 	</script>
 </body>
 </html>
